# BGVR

./: .gitignore  README.md
BGVR/: .gitignore
chapter_03/experiment_3.5/: Cargo.toml  README.md
chapter_03/experiment_3.5/src/: main.rs  output.txt
chapter_05/experiment_5.8/: Cargo.toml  README.md
chapter_05/experiment_5.8/src/: merged_corrections.json  output.txt
chapter_05/experiment_5.8/src/partial_patches/: partial_patches_chunk_1.json  partial_patches_chunk_2.json
chapter_07/experiment_7_1/: Cargo.toml  README.md
chapter_07/experiment_7_1/src/: regions.txt  sample1.bam  sample1.sorted.bam.bai  sample2.bam  sample2.sam
chapter_08/experiment_8.4/: Cargo.toml  README.md
chapter_08/experiment_8.4/src/: main.rs  sample.freq.tsv
chapter_08/experiment_8.5/: Cargo.toml  README.md
chapter_08/experiment_8.5/data/: chroms.txt  debug.sam  pipeline.toml  sample.bam  sample.fa  sample.fa.fai  sample_reads.fastq
chapter_08/experiment_8.6/: Cargo.toml  README.md
chapter_08/experiment_8.6/mock_libs/odgi/src/: lib.rs
chapter_08/experiment_8.6/mock_libs/whatshap-rs/src/: lib.rs
chapter_08/experiment_8.6/results/: results.arrow
chapter_08/experiment_8.6/src/: generate_onnx_model.py  sample_graph.json  sample_variants.vcf
chapter_08/experiment_8_2/: Cargo.toml  README.md
chapter_08/experiment_8_2/src/: cohort_A.vcf  output.txt  query_results.parquet  synthetic_variant_data.csv
chapter_08/experiment_8_3/: Cargo.toml  README.md
chapter_08/experiment_8_3/src/: main.rs  mapped.bam  output.txt  reference.fa
chapter_09/experiment_9_2/: Cargo.toml  README.md  fix_memory_requirements.sh  generate_data.py  main.nf  nextflow.config
chapter_09/experiment_9_2/.nextflow/: history
chapter_09/experiment_9_2/.nextflow/cache/581155e8-1411-4c21-b03e-32851669b952/: index.fabulous_wegener  index.magical_einstein
chapter_09/experiment_9_2/assets/: multiqc_config.yml
chapter_09/experiment_9_2/conf/: base.config  igenomes.config  modules.config  test.config
chapter_09/experiment_9_2/data/: kmer_index.rar  transcripts.fasta  true_expression.tsv
chapter_09/experiment_9_2/results/: quantification.tsv  quantification_k25.tsv
chapter_09/experiment_9_2/results/pseudoalignment/: reads_quantification.tsv
chapter_09/experiment_9_2/results_nextflow/pseudoalignment/: reads_quantification.tsv
chapter_09/experiment_9_2/src/: main.rs
chapter_09/experiment_9_3/: Cargo.toml  README.md  generate_sample_data.py  main.nf  rnaseq-normalizer
chapter_09/experiment_9_3/results/: batch_correction_log.txt  corrected_counts.tsv  summary.txt
chapter_09/experiment_9_3/src/: main.rs
chapter_09/experiment_9_3/test_data_large/: README.md  batch_metadata.tsv
chapter_09/experiment_9_3/test_data_medium/: README.md  batch_metadata.tsv  raw_counts.tsv
chapter_09/experiment_9_3/test_data_small/: README.md  batch_metadata.tsv  raw_counts.tsv
chapter_09/experiment_9_3/work/34/4315c6682960910f75c0ee92c4e3ee/: normalization_stats.txt  normalized_counts.tsv
chapter_09/experiment_9_3/work/54/8616295b7ea49b858dcf0b8acd7407/: validation_report.txt
chapter_09/experiment_9_4/: Cargo.toml  README.md  generate_the_data.py  main.nf
chapter_09/experiment_9_4/results/: differential_expression.tsv  ma_plot_data.tsv  summary.txt  the_analysis_stats.txt
chapter_09/experiment_9_4/src/: main.rs
chapter_09/experiment_9_4/the_test_data_large/: README.md  expected_results.txt  sample_metadata.tsv
chapter_09/experiment_9_4/the_test_data_medium/: README.md  expected_results.txt  normalized_counts.tsv  sample_metadata.tsv
chapter_09/experiment_9_4/the_test_data_small/: README.md  expected_results.txt  normalized_counts.tsv  sample_metadata.tsv
chapter_09/experiment_9_4/work/2a/d2205149d18048f8b0ccae70fcf650/: volcano_plot_data.tsv
chapter_09/experiment_9_4/work/36/1d39b0f73995d529cca753f07c26d6/: input_validation_report.txt
chapter_09/experiment_9_5/: Cargo.toml  README.md  main.nf  test_analysis.txt  test_normalized.tsv  test_summary.txt
chapter_09/experiment_9_5/data/: expression_data.tsv  gene_info.tsv  sample_metadata.tsv
chapter_09/experiment_9_5/data/annotation/: annotation.gtf
chapter_09/experiment_9_5/data/genome_index/: chrNameLength.txt  genomeParameters.txt
chapter_09/experiment_9_5/results/expression/: sample1_expression.tsv  sample3_expression.tsv  sample4_expression.tsv
chapter_09/experiment_9_5/results/final/: analysis_summary.txt
chapter_09/experiment_9_5/results/qc/: sample2_qc.txt  sample4_qc.txt
chapter_09/experiment_9_5/results/reports/: execution_report.html  execution_timeline.html  execution_trace.txt
chapter_09/experiment_9_5/src/: main.rs
chapter_09/experiment_9_5/work/1e/00fee1ccf630ae1132ff0fa89e271d/: sample1_qc.txt
chapter_09/experiment_9_5/work/2f/069782c3fb1fb1d8ce94e306d9c51a/: combined_matrix.tsv  sample_metadata.tsv
chapter_09/experiment_9_5/work/32/cf7f104a40c75f28daeb804176a4b6/: sample1_expression.tsv
chapter_09/experiment_9_5/work/49/ba2ca3654969d439a2d7c2cd59eac8/: sample2_expression.tsv
chapter_09/experiment_9_5/work/4f/f123bdd7ae27d534a2ba36d86cc01b/: sample1_qc.txt
chapter_09/experiment_9_5/work/6d/7790e3f714c345dc2c73df352efa34/: sample3_qc.txt
chapter_09/experiment_9_5/work/79/5fa81ff2c0fdc2db9c83231db5cf76/: sample3_expression.tsv
chapter_09/experiment_9_5/work/88/2b569525cb9550201e448b34bdab5f/: sample3_qc.txt
chapter_09/experiment_9_5/work/9f/09c10b61ab5dea1edfc43a70dff06b/: analysis_summary.txt  combined_matrix.tsv
chapter_09/experiment_9_5/work/bc/7689d4ecab5b158eb7c73fcfe55f0f/: sample2_qc.txt
chapter_09/experiment_9_5/work/e5/: sample4_expression.tsv
chapter_09/experiment_9_6/: Cargo.toml  README.md  main.nf
chapter_09/experiment_9_6/data/processed/: cell_coords.tsv
chapter_09/experiment_9_6/data/synthetic/: metadata.json
chapter_09/experiment_9_6/results/pipeline_info/: execution_trace.txt
chapter_09/experiment_9_6/results/validation/: validation_report.txt
chapter_09/experiment_9_6/scripts/: generate_sample_data.py  validate_input.py
chapter_09/experiment_9_6/src/: main.rs
(+839 files in other folders)
