[package]
name = "experiment_3.5"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.7"             # For parallel processing
needletail = "0.6.3"        # For FASTA/FASTQ parsing
dashmap = "6.1.0"           # For concurrent hashmap
serde = { version = "1.0", features = ["derive"] }  # For serialization
serde_json = "1.0"        # For JSON output
