[package]
name = "transcript_counting"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bam = "0.1.2"              
rust-htslib = "0.49.0"      
rayon = "1.8.0"             
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"           
log = "0.4.20"               
env_logger = "0.11.7"       
clap = { version = "4.4", features = ["derive"] }  
bio = "2.2.0"              