[package]
name = "rust_noodles_coverage"
version = "0.1.0"
edition = "2024"

[dependencies]
noodles = { version = "0.5", features = ["bam", "core", "vcf"] }
rayon = "1.5.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11.8"
thiserror = "2.0.12"
anyhow = "1.0"