[package]
name = "variant-annotator"
version = "0.2.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow       = "1.0"
clap         = { version = "4.3", features = ["derive"] }
log          = "0.4"
env_logger   = "0.10"
indicatif    = "0.17"
fxhash       = "0.2"
rayon        = "1.7"
num_cpus     = "1.15"
polars       = { version = "0.32.1", features = ["parquet","csv"] }
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
thiserror    = "1.0"
rust-lapper  = "0.3"
tch = { version = "0.1.0", optional = true }     # Downgraded to be compatible with LibTorch 1.2.0
bio          = "1.1"       # for FASTA handling
failure      = "0.1.8"     # Added for compatibility with tch

# noodles crates:
noodles-vcf  = "0.32.0"
noodles-gff  = "0.26.0"
noodles-bgzf = "0.19.0"
noodles-fasta= "0.26.0"