[package]
name = "genomic_pipeline"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Genomic variant analysis pipeline"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
noodles-bam = "0.34"
noodles-vcf = "0.32"
noodles-fasta = "0.26"
noodles-gff = "0.26"
tokio = { version = "1.29", features = ["full"] }
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
tempfile = "3.7"
indicatif = "0.17"
human_format = "1.0"
num_cpus = "1.15"