[package]
name = "variant-scorer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A tool for scoring genetic variants using pangenome graphs and machine learning"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
ndarray = "0.15"
odgi = { path = "./mock_libs/odgi" }
onnxruntime = { path = "./mock_libs/onnxruntime" }
polars = { version = "0.33", features = ["parquet", "ipc", "json", "lazy", "dtype-full"] }
rayon = "1.8"
rust-htslib = "0.44"
serde = { version = "1.0", features = ["derive"] }
whatshap-rs = { path = "./mock_libs/whatshap-rs" }
num_cpus = "1.16"
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.17"
thiserror = "1.0"
tempfile = "3.8"
serde_json = "1.0"
rand = "0.8"

[features]
default = []
cuda = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
