[package]
name = "pangenome_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
noodles = { version = "0.6", features = ["vcf"] }  # Use noodles version 0.6 for VCF
csv = "1.1"  # for CSV file processing
serde = { version = "1.0", features = ["derive"] }  # for serialization
serde_json = "1.0"  # if you're using JSON as well
rayon = "1.5"  # for parallel processing
polars = { version = "0.47.0", features = ["parquet", "csv"] }  # For DataFrame manipulation, with CSV and Parquet features
anyhow = "1.0"  # For error handling
bio = "0.38.0"  # Ensure this version supports VCF functionality
log = "0.4"  # For logging
env_logger = "0.9"  # For logger initialization
num_cpus = "1.14.0"  # For getting CPU count