[package]
name = "variant-caller"
version = "0.1.0"
edition = "2021"
# Use the newer resolver to help with dependency conflicts
resolver = "2"

[dependencies]
anyhow        = "1.0"
clap          = { version = "4.3", features = ["derive"] }
colored       = "2.0.0"
env_logger    = "0.10.0"
flate2        = "1.0"
indicatif     = "0.17"
num_cpus      = "1.15"
rayon         = { version = "1.7", optional = true }
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
statrs        = "0.16.0"
thiserror     = "1.0.40"
tracing       = "0.1"
tracing-subscriber = "0.3"
polars        = { version = "0.32.1", features = ["parquet","lazy","strings"] }

[features]
default = ["parallel"]
parallel = ["rayon"]