[package]
name = "bio-pseudo-align"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust_pseudoalign"
path = "src/main.rs"

[dependencies]
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
dashmap = "5.5"
indicatif = "0.17"
bio = "1.4"
flate2 = "1.0"
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
