[package]
name = "rnaseq-normalizer"
version = "1.0.0"
edition = "2021"
authors = ["Bioinformatics Pipeline <pipeline@example.com>"]
description = "A robust RNA-seq count normalization tool implementing DESeq2-style normalization"
license = "MIT"
repository = "https://github.com/username/rnaseq-normalizer"
keywords = ["bioinformatics", "rnaseq", "normalization", "genomics"]
categories = ["science", "command-line-utilities"]

[[bin]]
name = "rnaseq-normalizer"
path = "src/main.rs"

[dependencies]
clap = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"
log = "0.4"
env_logger = "0.10"
csv = "1.3"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true