[package]
name = "rust_expression_tool"
version = "2.0.0"
edition = "2021"
authors = ["Bioinformatics Team"]
description = "A comprehensive RNA-seq expression analysis tool"
license = "MIT"
repository = "https://github.com/your-org/rust-expression-tool"

[[bin]]
name = "rust_expression_tool"
path = "src/main.rs"

[dependencies]
# Core utilities
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File I/O and parsing
csv = "1.3"
log = "0.4"
env_logger = "0.10"

# Scientific computing
ndarray = { version = "0.15", features = ["rayon"] }
rayon = "1.8"

# Statistics and math
statrs = "0.16"
nalgebra = "0.32"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
fastrand = "2.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Bioinformatics specific
bio = "1.4"
rust-htslib = "0.44"

# Performance monitoring
criterion = { version = "0.5", optional = true }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[features]
default = []
benchmarks = ["criterion"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true